--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "@vitejs/plugin-react": "^4.3.1"
   }
 }
